Closed Bug 915938 Opened 12 years ago Closed 12 years ago

Inconsistent baseline for text in canvases

Categories

(Firefox for Android Graveyard :: Toolbar, defect)

ARM
Android
defect
Not set
normal

Tracking

(firefox24 unaffected, firefox25+ fixed, firefox26+ fixed, firefox27 fixed, fennec25+)

RESOLVED FIXED
Firefox 27
Tracking Status
firefox24 --- unaffected
firefox25 + fixed
firefox26 + fixed
firefox27 --- fixed
fennec 25+ ---

People

(Reporter: kbrosnan, Assigned: gw280)

References

()

Details

(Keywords: regression)

Attachments

(2 files)

The baseline of the text in this canvas is inconsistent. I have seen this in other canvases as well.
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e3c19a339b36&tochange=5ceea82a79c7 Pref on SkiaGL looks suspicious. Though there are a number of Graphics changes in that regression range. Will do some additional bisecting.
Blocks: 895409
Suspicion confirmed. The first bad revision is: changeset: 139475:bdd1a266176f user: James Willcox <jwillcox@mozilla.com> date: Fri Jul 19 14:03:46 2013 -0400 summary: Bug 895409 - Enable SkiaGL canvas on Android r=blassey
On Galaxy Nexus I don't get any text at all in the top right box. Strange. We should fix this and get a mochitest in that covers it. George can you see if this is reproducible with the rebase. If so, please fix :)
Assignee: nobody → gwright
This is on a Nexus 7 2013 (Adreno 320) and a HTC One X+ (nVIDIA Tegra 3) both running Android 4.3.
Status: NEW → ASSIGNED
tracking-fennec: ? → 25+
This bug is due to hinting mismatches between layout and rendering. Basically, layout thinks we're unhinted (which we are), and skia thinks we're hinted (the default if no hint options are explicitly set). Grab our GlyphRenderingOptions from gfxPlatform in our canvas rendering context and pass it through to the DrawTarget in order to resolve this mismatch.
Attachment #817199 - Flags: review?(jfkthame)
Comment on attachment 817199 [details] [diff] [review] honour-hinting.patch Review of attachment 817199 [details] [diff] [review]: ----------------------------------------------------------------- Looks reasonable to me. :)
Attachment #817199 - Flags: review?(jfkthame) → review+
Comment on attachment 817199 [details] [diff] [review] honour-hinting.patch [Approval Request Comment] Regression caused by (bug #): 848491 User impact if declined: Canvas text won't render correctly on Android Testing completed (on m-c, etc.): Full try run, m-c Risk to taking this patch (and alternatives if risky): Low risk, only synchronises hinting preferences in different parts of the codebase String or IDL/UUID changes made by this patch: None
Attachment #817199 - Flags: approval-mozilla-release?
Attachment #817199 - Flags: approval-mozilla-beta?
Comment on attachment 817199 [details] [diff] [review] honour-hinting.patch See previous comment. Accidentally flagged for release instead of aurora
Attachment #817199 - Flags: approval-mozilla-release? → approval-mozilla-aurora?
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 27
Comment on attachment 817199 [details] [diff] [review] honour-hinting.patch Since this is low risk and a tracked regression, we'll take on branches. Thanks for getting this fix in.
Attachment #817199 - Flags: approval-mozilla-beta?
Attachment #817199 - Flags: approval-mozilla-beta+
Attachment #817199 - Flags: approval-mozilla-aurora?
Attachment #817199 - Flags: approval-mozilla-aurora+
Hrm, so it seems we're failing tests on beta/aurora because we fuzzed a bunch of tests on m-c that aren't fuzzed on beta/aurora. We should uplift the patches from bug 888446 as well
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: