Bug 915938 - Honour the glyph rendering options set by the platform when drawing text on a <canvas>. r=jfkthame, a=akeybl